bh/ingresses/bh-healthcheck-ingress-nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/app-root: /bla-app
    ingress.kubernetes.io/rewrite-target: /new-empty.page
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  generation: 1
  name: bh-healthcheck-ingress-nginx
  selfLink: /apis/extensions/v1beta1/namespaces/bh/ingresses/bh-healthcheck-ingress-nginx
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - http:
      paths:
      - backend:
          serviceName: bh-service
          servicePort: 8080
        path: /bh/empty.jsp
status:
  loadBalancer: {}
